# Chat-Forum-code

./: .gitignore  CMakeLists.txt
backend/: CMakeLists.txt  main.cpp
backend/controllers/: ChatController.cpp  ChatController.h  CommentController.cpp  CommentController.h  LikeController.cpp  LikeController.h  NotificationController.cpp  NotificationController.h  PostController.cpp  PostController.h  UserController.cpp  UserController.h
backend/models/: Comment.cpp  Comment.h  Like.cpp  Like.h  Message.cpp  Message.h  Post.cpp  Post.h  User.cpp  User.h
backend/services/: ChatService.cpp  ChatService.h  CommentService.cpp  CommentService.h  FileService.cpp  FileService.h  LikeService.cpp  LikeService.h  NotificationService.cpp  NotificationService.h  PostService.cpp  PostService.h  UserService.cpp  UserService.h
backend/utils/: AuthMiddleware.cpp  AuthMiddleware.h  ConfigUtil.cpp  ConfigUtil.h  JwtUtil.cpp  JwtUtil.h  RateLimitMiddleware.h  RequestTracer.h  ResponseUtil.cpp  ResponseUtil.h  ValidationUtil.cpp  ValidationUtil.h
backend/websocket/: ChatWebSocketController.cpp  ChatWebSocketController.h
frontend/: tsconfig.tsbuildinfo
